--- a/detalles/comprar.html
+++ b/detalles/comprar.html
@@ -49,7 +49,7 @@
 				  	  <div class="col-md-6 m-0 px-1 ">
 				  	  	 <form class="m-0 p-0 d-flex align-items-center justify-content-center ">
 						 <input class="form-control me-2" type="search" placeholder="Ingresa tu pregunta" aria-label="Buscar">
-						 <button class="btn btn-outline-dark" type="submit">Buscar</button>
+						 <button class="btn btn-dark" type="submit">Buscar</button>
 			            </form>
 				  	  </div>
 				  </div>
@@ -86,34 +86,34 @@
    </header>
     <!-- Termina  el header -->
    <!-- Inicia el main -->
-   <main class="d-flex align-items-center justify-content-center p-4 m-4 detalles ">
-   	 <div class="contaier-fluid col-md-5">
+   <main class="d-flex align-items-center justify-content-center py-4 my-4 px-1 mx-1 textoDetalles ">
+   	 <div class="contaier-fluid col-md-6 col-sm-12">
    	 	<div class="d-flex align-items-center justify-content-space-around flex-column ">
 	   	 	<a class="logo px-0 py-3" href="../index.html">
 			  <img src="../img/logo.svg" alt="logo de celkap">
 			</a>
-			<h1 id="Importante" class="fs-2 text-center">Como comprar</h1>
+			<h1 id="textoImportante" class="fs-2 text-center">Como comprar</h1>
 			<p>
 				A continuación te mostramos los pasos para que puedas comprar en la tienda. Recuerda que no contamos con tiendas físicas, ni entregas en oficina. Sólo tienda en línea.
 			</p>
-			<p class=" fw-bold" id="Importante">
+			<h5 class=" fw-bold" id="textoImportante">
 			   1.- Agrega tu producto al carrito de compras
-			</p>
+			</h5>
    	 		  <ul>
    	 		  	   <li>Selecciona el color, capacidad y piezas a comprar y da click en “AGREGAR AL CARRITO”.</li>
    	 		  	   <li>Confirmar el producto a comprar dando click en “IR A PAGAR”.</li>
    	 		  </ul>
-   	 		  <p class=" fw-bold" id="Importante">
+   	 		  <h5 class=" fw-bold" id="textoImportante">
 			   2.- Registra tu email, tu nombre y datos de envío
-			</p>
+			 </h5>
    	 		  <ul>
    	 		  	   <li>Ingresa un correo válido pues a través de este te llegarán notificaciones e información sobre tu pedido.</li>
    	 		  	   <li>Puedes elegir si recibir tu pedido a tu domicilio o recoger en una sucursal LOL. Para ambos casos necesitas tu código postal.</li>
    	 		  	   <li>Selecciona la paquetería de tu preferencia.</li>
    	 		  </ul>
-   	 		  <p class=" fw-bold" id="Importante">
+   	 		  <h5 class=" fw-bold" id="textoImportante">
 			   3.- Elige un método de pago
-			</p>
+			  </h5>
    	 		  <ul>
    	 		  	   <li>Selecciona uno de nuestros métodos de pago, entre ellos puede ser:</li>
    	 		  	    <ul>
@@ -126,16 +126,16 @@
    	 		  </ul>
    	 		  <p>Estos pagos se verán reflejados en un lapso de 6 horas como máximo y sólo tienes 24 horas para realizar tu pago. No es necesario que nos envíes tu comprobante de pago.</p>
    	 		  <p>Una vez registrado tu pago estarás recibiendo actualizaciones de tu pedido por correo.</p>
-   	 		   <p class=" fw-bold" id="Importante">
+   	 		 <h5 class=" fw-bold" id="textoImportante">
 			   4.- Confirmación de pago*
-			</p>
+			</h5>
    	 		  <ul>
    	 		  	   <li>Una vez realizado tu pago, tu compra comenzará un proceso de verificación con el fin de confirmar que la compra sea reconocida por el propietario de la tarjeta (esto por medio de correo).</li>
    	 		  	   <li>Una vez recibidos, la revisión de documentos puede demorar hasta 48 horas hábiles antes de que se libere tu compra.</li>
    	 		  </ul>
-   	 		  <p class=" fw-bold" id="Importante">
+   	 		<h5 class=" fw-bold" id="textoImportante">
 			  5.- Recibe tu pedido
-			</p>
+			</h5>
    	 		  <ul>
    	 		  	   <li>Todos los envíos están asegurados contra pérdida o robo durante el trayecto de doto a tu domicilio.</li>
    	 		  	   <li>Las paqueterías que usamos son: DHL, Moova, Estafeta, UPS, entre otros.</li>
@@ -147,38 +147,40 @@
   </main>
 <!-- Termina el main -->
 <!-- Inicia el footer -->
-  <footer>
-    <div class="container-fluid">
+  <footer >
+    <div class="container-fluid pb-2">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
-       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
-       	    	   <a href="../index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
+       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-1 px-4"> 
+       	    	   <a href="index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
 		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
 		       	  	<ul>
 						<li>Teléfono atención: 771 475 07 00 </li>
-						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
+						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</li>
 						<li>Email: info@CelKap.mx</li>
 						<li>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México</li>
 					</ul>      			
 		      </div>
             <div class="redesExtras col-md-7">
-       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-1 redes">
-			       	 <h5>Siguenos en nuestras redes</h5>
-			       	 <a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
-					 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
-				     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-4 redes ">
+			       	 <h5 class="col-lg-6 text-center" >Siguenos en nuestras redes</h5>
+			       	 <div class="col-lg-6 d-flex">
+			       	 	<a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
+						 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
+					     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+			       	 </div>
 				</div>
 		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
 					<div class="list-group px-2 list-group-flush">
 		           	   <h5>Quienes somos</h5>
-					  <a href="somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
-					  <a href="aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
-					  <a href="terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
+					  <a href="../detalles/somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
+					  <a href="../detalles/aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
+					  <a href="../detalles/terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
 					</div>
 					<div class="list-group  px-2 list-group-flush">
 		           	   <h5>Centro de ayuda</h5>
-					  <a href="comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
-					  <a href="garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
-					  <a href="preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
+					  <a href="../detalles/comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
+					  <a href="../detalles/garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
+					  <a href="../detalles/preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
 					</div>
                 </div>  	               	
             </div>
