--- a/detalles/aviso.html
+++ b/detalles/aviso.html
@@ -49,7 +49,7 @@
 				  	  <div class="col-md-6 m-0 px-1 ">
 				  	  	 <form class="m-0 p-0 d-flex align-items-center justify-content-center ">
 						 <input class="form-control me-2" type="search" placeholder="Ingresa tu pregunta" aria-label="Buscar">
-						 <button class="btn btn-outline-dark" type="submit">Buscar</button>
+						 <button class="btn btn-dark" type="submit">Buscar</button>
 			            </form>
 				  	  </div>
 				  </div>
@@ -86,10 +86,10 @@
    </header>
    <!-- Termina  el header -->
    <!-- Inicia el main -->
-   <main class="d-flex align-items-center justify-content-center p-5 m-5 detalles ">
+   <main class="d-flex align-items-center justify-content-center p-4 m-4  textoDetalles ">
    	 <div class="contaier-fluid col-md-7">
    	 	<div class="d-flex align-items-flex-start justify-content-space-around flex-column ">
-   	 		<h1 id="Importante" class="fs-2 text-center">Aviso de privacidad</h1>
+   	 		<h1 id="textoImportante" class="fs-2 text-center">Aviso de privacidad</h1>
 			<p>
 				Aviso de privacidad forma parte del sitio web www.celkap.com Sus datos personales serán tratados por Comercializadora celkap S.A. de C.V.
 			</p>
@@ -97,9 +97,9 @@
 				Comercializadora celkap S.A. de C.V., está ubicada en Colonia del Alamo,Num 344 CP. 45055 Pachuca,Hidalgo. 
 				Nuestro teléfono es: 771 800 44 55. Nuestro responsable de protección de datos es el Lic. Alvaro kowalsky y se ubica en ese mismo domicilio, puede contactarlo por el siguiente correo electrónico: contacto@alvaroKow.com.mx.
 			</p>
-   	 		<p class="fw-bold">
+   	 		<h5 id="textoImportante" class="fw-bold">
    	 			Datos que solicitamos
-   	 		</p>
+   	 		</h5>
    	 		 <ul>
    	 		 	<li>Nombre(Completo)</li>
    	 		 	<li>Direccion</li>
@@ -115,9 +115,9 @@
    	 		 	<li>Fecha de nacimiento</li>
    	 		 </ul>
 
-   	 		<p class="fw-bold">
+   	 		<h5 id="textoImportante"  class="fw-bold">
    	 			El uso de tecnologías de rastreo en nuestro portal de internet 
-   	 		</p>
+   	 		</h5>
    	 		<p>Le informamos que en nuestra página de internet utilizamos cookies, web beacons u otras tecnologías, a través de las cuales es posible monitorear su comportamiento como usuario de internet, así como brindarle un mejor servicio y experiencia al navegar en nuestra página. Los datos personales que recabamos a través de estas tecnologías, los utilizaremos para los siguientes fines:</p>
    	 		<p>Ofrecer productos y servicios más idóneas de acuerdo a sus búsquedas y necesidades</p>
    	 		<p>Los datos personales que obtenemos de estas tecnologías de rastreo son los siguientes:</p>
@@ -137,38 +137,40 @@
   </main>
  <!-- Termina el main -->
 <!-- Inicia el footer -->
-  <footer>
-    <div class="container-fluid">
+   <footer >
+    <div class="container-fluid pb-2">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
-       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
-       	    	   <a href="../index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
+       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-1 px-4"> 
+       	    	   <a href="index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
 		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
 		       	  	<ul>
 						<li>Teléfono atención: 771 475 07 00 </li>
-						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
+						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</li>
 						<li>Email: info@CelKap.mx</li>
 						<li>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México</li>
 					</ul>      			
 		      </div>
             <div class="redesExtras col-md-7">
-       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-1 redes">
-			       	 <h5>Siguenos en nuestras redes</h5>
-			       	 <a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
-					 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
-				     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-4 redes ">
+			       	 <h5 class="col-lg-6 text-center" >Siguenos en nuestras redes</h5>
+			       	 <div class="col-lg-6 d-flex">
+			       	 	<a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
+						 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
+					     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+			       	 </div>
 				</div>
 		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
 					<div class="list-group px-2 list-group-flush">
 		           	   <h5>Quienes somos</h5>
-					  <a href="somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
-					  <a href="aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
-					  <a href="terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
+					  <a href="../detalles/somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
+					  <a href="../detalles/aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
+					  <a href="../detalles/terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
 					</div>
 					<div class="list-group  px-2 list-group-flush">
 		           	   <h5>Centro de ayuda</h5>
-					  <a href="comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
-					  <a href="garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
-					  <a href="preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
+					  <a href="../detalles/comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
+					  <a href="../detalles/garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
+					  <a href="../detalles/preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
 					</div>
                 </div>  	               	
             </div>
