--- a/detalles/garantia.html
+++ b/detalles/garantia.html
@@ -49,7 +49,7 @@
 				  	  <div class="col-md-6 m-0 px-1 ">
 				  	  	 <form class="m-0 p-0 d-flex align-items-center justify-content-center ">
 						 <input class="form-control me-2" type="search" placeholder="Ingresa tu pregunta" aria-label="Buscar">
-						 <button class="btn btn-outline-dark" type="submit">Buscar</button>
+						 <button class="btn btn-dark" type="submit">Buscar</button>
 			            </form>
 				  	  </div>
 				  </div>
@@ -86,28 +86,28 @@
    </header>
    <!-- Termina  el header -->
    <!-- Inicia el main -->
-   <main class="d-flex align-items-center justify-content-center p-4 m-4 detalles ">
-   	 <div class="contaier-fluid col-md-7">
+   <main class="d-flex align-items-center justify-content-center py-4 my-4 px-1 mx-1 textoDetalles ">
+   	 <div class="contaier-fluid col-md-7 col-sm-12">
    	 	<div class="d-flex align-items-center justify-content-space-around flex-column ">
 	   	 	
-			<h1 id="Importante" class="fs-2 text-center">Garantía de Productos.</h1>
+			<h1 id="textoImportante" class="fs-2 text-center">Garantía de Productos.</h1>
 			<p>
 				Garantía de los productos. Los productos publicados en Celkap.com son originales, nuevos (salvo que se especifique una condición diferente) y viajan en caja cerrada tal y como lo entrega el fabricante en nuestros almacenes, una vez abierto el producto y si llegará a encontrar alguna falla debe contactarse en primera instancia a los Centros de Soporte al cliente del fabricante de que se trate, el 80% de las veces se trata de desconocimiento en su funcionamiento y / o configuración, si tiene una falla real puede hacer válida la garantía del fabricante dentro del período de vigencia a través de sus Centros de Servicio
 			</p>
    	 		 
-   	 		  <p class=" fw-bold" id="Importante">
+   	 		<h5 class=" fw-bold" id="textoImportante">
 			   Garantia por defectos de fábrica (mayor a 30 dias)
-			</p>
+			</h5>
    	 		  <ul>
    	 		  	   <li>Si observas que tu equipo tiene alguna falla por defecto de fábrica dentro de los 12 meses después de haber recibido tu pedido, envíanos tu equipo.</li>
    	 		  	   <li>El tiempo de respuesta es de 7 a 10 días hábiles ya que se inspeccionará el equipo para validar el defecto de fabricación que nos mencionas por lo que es importante describirnos bien el inconveniente presentado.</li>
    	 		  	   <li>Para poder solicitar tu garantía no es necesario que tengas factura, sólo necesitas tu número de pedido y el correo con el que registraste la compra.</li>
    	 		  </ul>
-   	 		  <p class=" fw-bold" id="Importante">
+   	 		  <h5 class=" fw-bold" id="textoImportante">
 			   Devolución (equipos nuevos - primeros 30 días)
-			</p>
+			 </h5>
    	 		  <ul>
-   	 		  	   <li>Si el producto se encuentra nuevo y sellado a partir del momento que lo recibes, cuentas con 30 días naturales para devolver tu producto y recibir tu reembolso o cambio de producto por otro de tu agrado. Deberás cubrir un monto de *$150.00 MXN de envío a doto por cada producto adquirido por gastos administrativos.
+   	 		  	   <li>Si el producto se encuentra nuevo y sellado a partir del momento que lo recibes, cuentas con 30 días naturales para devolver tu producto y recibir tu reembolso o cambio de producto por otro de tu agrado. Deberás cubrir un monto de $150.00 MXN de envío a Celkap por cada producto adquirido por gastos administrativos.
    	 		  	   </li>
    	 		  	   <li>
    	 		  	   	El tiempo de respuesta para la devolucion es de 48 a 72 horas hábiles una vez recibido el producto.
@@ -117,38 +117,40 @@
   </main>
 <!-- Termina el main -->
 <!-- Inicia el footer -->
-  <footer>
-    <div class="container-fluid">
+   <footer >
+    <div class="container-fluid pb-2">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
-       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
-       	    	   <a href="../index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
+       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-1 px-4"> 
+       	    	   <a href="index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
 		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
 		       	  	<ul>
 						<li>Teléfono atención: 771 475 07 00 </li>
-						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
+						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</li>
 						<li>Email: info@CelKap.mx</li>
 						<li>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México</li>
 					</ul>      			
 		      </div>
             <div class="redesExtras col-md-7">
-       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-1 redes">
-			       	 <h5>Siguenos en nuestras redes</h5>
-			       	 <a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
-					 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
-				     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-4 redes ">
+			       	 <h5 class="col-lg-6 text-center" >Siguenos en nuestras redes</h5>
+			       	 <div class="col-lg-6 d-flex">
+			       	 	<a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
+						 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
+					     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+			       	 </div>
 				</div>
 		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
 					<div class="list-group px-2 list-group-flush">
 		           	   <h5>Quienes somos</h5>
-					  <a href="somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
-					  <a href="aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
-					  <a href="terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
+					  <a href="../detalles/somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
+					  <a href="../detalles/aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
+					  <a href="../detalles/terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
 					</div>
 					<div class="list-group  px-2 list-group-flush">
 		           	   <h5>Centro de ayuda</h5>
-					  <a href="comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
-					  <a href="garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
-					  <a href="preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
+					  <a href="../detalles/comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
+					  <a href="../detalles/garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
+					  <a href="../detalles/preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
 					</div>
                 </div>  	               	
             </div>
