--- a/detalles/preguntas.html
+++ b/detalles/preguntas.html
@@ -49,7 +49,7 @@
 				  	  <div class="col-md-6 m-0 px-1 ">
 				  	  	 <form class="m-0 p-0 d-flex align-items-center justify-content-center ">
 						 <input class="form-control me-2" type="search" placeholder="Ingresa tu pregunta" aria-label="Buscar">
-						 <button class="btn btn-outline-dark" type="submit">Buscar</button>
+						 <button class="btn btn-dark" type="submit">Buscar</button>
 			            </form>
 				  	  </div>
 				  </div>
@@ -86,13 +86,13 @@
    </header>
    <!-- Termina  el header -->
    <!-- Inicia el main -->
-   <main class="d-flex align-items-center justify-content-center p-4 m-4 detalles ">
-   	 <div class="contaier-fluid col-md-5">
+   <main class="d-flex align-items-center justify-content-center py-4 my-4 px-1 mx-1 textoDetalles ">
+   	 <div class="contaier-fluid col-md-6 col-sm-12">
    	 	<div class="d-flex align-items-center justify-content-space-around flex-column ">
-	   	 <h1 id="Importante" class="fs-2 text-center">Preguntas frecuentes</h1>
-			<p class=" fw-bold" id="Importante">
+	   	 <h1 id="textoImportante" class="fs-2 text-center">Preguntas frecuentes</h1>
+			<h5 class=" fw-bold py-3" id="textoImportante">
 			   ¿Es seguro comprar en Celkap?
-			</p>
+			</h5>
    	 		  <p>
    	 		  	En Tecnowow creamos un espacio seguro para tus compras, por eso te ofrecemos diferentes formas de pago:
    	 		  </p>
@@ -100,56 +100,58 @@
    	 		  	<li>TRANSFERENCIA O DEPÓSITO EN EFECTIVO: Puedes realizar tu pago por medio de un depósito en efectivo o una transferencia electrónica desde cualquier banco a nuestra cuenta en  BBVA.</li>
    	 		  	<li>TARJETA DE CRÉDITO O DÉBITO: Aceptamos Tarjetas de Crédito o Débito VISA y MASTERCARD para realizar tus compras, quien procesa estos pagos es MERCADO PAGO, si tu tienes una cuenta en MERCADO LIBRE, podrás iniciar sesión y pagar en nuestra web, sin capturar ningún numero completo de tarjeta de crédito.  </li>
    	 		  </ul>
-   	 		 <p class=" fw-bold" id="Importante">
+   	 		 <h5 class=" fw-bold" id="textoImportante">
 			   ¿Cómo puedo registrarme en Celkap?
-			</p>
+			</h5>
    	 		  <ul>
    	 		  	   <li>Ingresa un correo válido pues a través de este te llegarán notificaciones e información sobre tu pedido.</li>
    	 		  	   <li>Puedes elegir si recibir tu pedido a tu domicilio o recoger en una sucursal LOL. Para ambos casos necesitas tu código postal.</li>
    	 		  	   <li>Selecciona la paquetería de tu preferencia.</li>
    	 		  </ul>
-   	 		  <p class=" fw-bold" id="Importante">
-			   <a class="text-muted text-decoration-none " href="comprar.html">¿Cómo puedo comprar en Celkap?</a>
-			  </p>
-   	 		  <p class=" fw-bold" id="Importante">¿Todos los productos tienen garantía?</p>
+   	 		  <a href="comprar.html" class="text-decoration-none py-3"><h5 class=" fw-bold" id="textoImportante">
+			   ¿Cómo puedo comprar en Celkap?
+			  </h5></a>
+   	 		  <h5 class=" fw-bold" id="textoImportante">¿Todos los productos tienen garantía?</h5>
    	 		  <p>¡Sí! En Celkap todos nuestros productos son completamente nuevos y cuentan con póliza de garantía directamente con el fabricante. Podrás hacer uso de dicha garantía a partir de la fecha que aparece en tu comprobante de compra. La garantía de los productos varía de acuerdo con las políticas de cada fabricante.</p>
    	 	</div>
    	 </div>
   </main>
   <!-- Termina el main -->
 <!-- Inicia el footer -->
-  <footer>
-    <div class="container-fluid">
+ <footer >
+    <div class="container-fluid pb-2">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
-       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
-       	    	   <a href="../index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
+       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-1 px-4"> 
+       	    	   <a href="index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
 		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
 		       	  	<ul>
 						<li>Teléfono atención: 771 475 07 00 </li>
-						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
+						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</li>
 						<li>Email: info@CelKap.mx</li>
 						<li>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México</li>
 					</ul>      			
 		      </div>
             <div class="redesExtras col-md-7">
-       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-1 redes">
-			       	 <h5>Siguenos en nuestras redes</h5>
-			       	 <a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
-					 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
-				     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-4 redes ">
+			       	 <h5 class="col-lg-6 text-center" >Siguenos en nuestras redes</h5>
+			       	 <div class="col-lg-6 d-flex">
+			       	 	<a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
+						 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
+					     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+			       	 </div>
 				</div>
 		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
 					<div class="list-group px-2 list-group-flush">
 		           	   <h5>Quienes somos</h5>
-					  <a href="somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
-					  <a href="aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
-					  <a href="terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
+					  <a href="../detalles/somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
+					  <a href="../detalles/aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
+					  <a href="../detalles/terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
 					</div>
 					<div class="list-group  px-2 list-group-flush">
 		           	   <h5>Centro de ayuda</h5>
-					  <a href="comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
-					  <a href="garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
-					  <a href="preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
+					  <a href="../detalles/comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
+					  <a href="../detalles/garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
+					  <a href="../detalles/preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
 					</div>
                 </div>  	               	
             </div>
