--- a/detalles/somos.html
+++ b/detalles/somos.html
@@ -49,7 +49,7 @@
 				  	  <div class="col-md-6 m-0 px-1 ">
 				  	  	 <form class="m-0 p-0 d-flex align-items-center justify-content-center ">
 						 <input class="form-control me-2" type="search" placeholder="Ingresa tu pregunta" aria-label="Buscar">
-						 <button class="btn btn-outline-dark" type="submit">Buscar</button>
+						 <button class="btn btn-dark" type="submit">Buscar</button>
 			            </form>
 				  	  </div>
 				  </div>
@@ -86,13 +86,13 @@
    </header>
    <!-- Termina  el header -->
    <!-- Inicia el main -->
-   <main class="d-flex align-items-center justify-content-center p-5 m-5 detalles ">
-   	 <div class="contaier-fluid col-md-7">
-   	 	<div class="d-flex align-items-center justify-content-space-around flex-column ">
+   <main class="d-flex align-items-center justify-content-center py-4 my-4 px-1 px-0 textoDetalles ">
+   	 <div class="contaier-fluid col-md-8 col-sm-12">
+   	 	<div class="d-flex align-items-center justify-content-space-around flex-column">
 	   	 	<a class="logo px-0 py-1" href="../index.html">
 			  <img src="../img/logo.svg" alt="logo de celkap">
 			</a>
-			<h1 id="Importante" class="fs-2 text-center">Acerca de nosotros</h1>
+			<h1 id="textoImportante" class="fs-2 text-center">Acerca de nosotros</h1>
 			<p>
 				Somos una tienda en línea mexicana que nació en el 2022, crecimos como proveedores de las plataformas reconocidas, en 2022 lanzamos nuestra página para practicar sin problema con un mejor precio sin algún pago de comisiones por usar otras plataformas.
 			</p>
@@ -110,44 +110,46 @@
    	 			A lo largo de estos años hemos logrado crecer a casi 100 colaboradores enfocados a realizar más de 1 millón entregas satisfactoriamente y más de 10,000 seguidores en Facebook.
                  Si tienes dudas puedes contactarnos en alguno de nuestros medios.‍ 
    	 		</p>
-   	 		<p class="text-decoration-underline importante">NO CONTAMOS CON TIENDAS FÍSICAS, sólo en línea.</p>
+   	 		<p id="textoImportante" class="text-decoration-underline">NO CONTAMOS CON TIENDAS FÍSICAS, sólo en línea.</p>
    	 	</div> 
    	 </div>	
   </main>
 <!-- Termina el main -->
 <!-- Inicia el footer -->
-  <footer>
-    <div class="container-fluid">
+ <footer >
+    <div class="container-fluid pb-2">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
-       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
-       	    	   <a href="../index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
+       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-1 px-4"> 
+       	    	   <a href="index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
 		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
 		       	  	<ul>
 						<li>Teléfono atención: 771 475 07 00 </li>
-						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
+						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</li>
 						<li>Email: info@CelKap.mx</li>
 						<li>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México</li>
 					</ul>      			
 		      </div>
             <div class="redesExtras col-md-7">
-       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-1 redes">
-			       	 <h5>Siguenos en nuestras redes</h5>
-			       	 <a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
-					 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
-				     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-4 redes ">
+			       	 <h5 class="col-lg-6 text-center" >Siguenos en nuestras redes</h5>
+			       	 <div class="col-lg-6 d-flex">
+			       	 	<a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
+						 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
+					     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+			       	 </div>
 				</div>
 		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
 					<div class="list-group px-2 list-group-flush">
 		           	   <h5>Quienes somos</h5>
-					  <a href="somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
-					  <a href="aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
-					  <a href="terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
+					  <a href="../detalles/somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
+					  <a href="../detalles/aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
+					  <a href="../detalles/terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
 					</div>
 					<div class="list-group  px-2 list-group-flush">
 		           	   <h5>Centro de ayuda</h5>
-					  <a href="comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
-					  <a href="garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
-					  <a href="preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
+					  <a href="../detalles/comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
+					  <a href="../detalles/garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
+					  <a href="../detalles/preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
 					</div>
                 </div>  	               	
             </div>
