--- a/detalles/terminos.html
+++ b/detalles/terminos.html
@@ -49,7 +49,7 @@
 				  	  <div class="col-md-6 m-0 px-1 ">
 				  	  	 <form class="m-0 p-0 d-flex align-items-center justify-content-center ">
 						 <input class="form-control me-2" type="search" placeholder="Ingresa tu pregunta" aria-label="Buscar">
-						 <button class="btn btn-outline-dark" type="submit">Buscar</button>
+						 <button class="btn btn-dark" type="submit">Buscar</button>
 			            </form>
 				  	  </div>
 				  </div>
@@ -86,43 +86,48 @@
    </header>
    <!-- Termina  el header -->
    <!-- Inicia el main -->
-   <main class="d-flex align-items-center justify-content-center p-5 m-5 detalles ">
-   	 <div class="contaier-fluid col-md-7">
-   	 	<div class="d-flex align-items-center justify-content-space-around flex-column ">
-   	 		<h1 id="Importante" class="fs-2 text-center">Terminos y condiciones</h1>
+   <main class="d-flex align-items-center justify-content-center py-4 my-5 px-1 mx-1 textoDetalles ">
+   	 <div class="contaier-fluid col-md-7 col-sm-12">
+   	 	<div class="d-flex align-items-center justify-content-center flex-column ">
+   	 		<h1 id="textoImportante" class="fs-2 text-center">Terminos y condiciones</h1>
 			<p>
 				Te damos la más cordial Bienvenida a la tienda en Línea Celkap.com
 			</p>
 			<p>
 				Ponemos  a su disposición las condiciones de uso que rigen la relación que existe entre Celkap.com y los usuarios o clientes que se entenderán como aceptadas al momento que procedan a la compra de productos en Celkap lo que le pedimos las leas detenidamente antes de utilizar nuestros servicios.
 			</p>
-   	 		<p id="Importante" class=" text-center">
+   	 		<h5 id="textoImportante" class=" text-center">
    	 			GENERALES:
-   	 		</p>
+   	 		</h5>
    	 		<p>
    	 			Celkap se reserva el derecho de cambiar o modificar en cualquier momento las condiciones de uso.
    	 		</p>
-   	 		<p class=" text-center" id="Importante">Responsabilidades.</p>
+   	 		<h5 id="textoImportante" class=" text-center">
+   	 			Responsabilidades.
+   	 		</h5>
    	 		<p>Celkap es responsable del uso y protección de los datos personales de nuestros clientes de acuerdo a nuestras políticas de privacidad publicadas e</p>
    	 		<p>Nuestros usuarios son responsables de brindar información veraz, verificable y completa necesaria para procesar sus pagos, pedidos y entregas y en ningún momento Celkap.com será responsable de la veracidad de dicha información.
             </p>
             <p>
             	Usted autoriza a Celkap y acepta que los datos personales proporcionados pueden ser transferidos a terceros que ofrecen servicios para realizar funciones únicamente en nuestro nombre y con el único fin de cumplir con la entrega de pedidos, enviar correos electrónicos, procesar información para procesamiento interno , con tarjetas de crédito, quienes solo podrán utilizar dicha información para procesar sus pedidos, atender sus aclaraciones o procesar sus garantías, en si todo lo que tenga relación con la compra que se pretenda o se haya realizado dentro de nuestra pagina web.
             </p>
-            <p class=" text-center" id="Importante">CONTENIDO DEL SITIO</p>
-            <p id="Importante"> Acceso al Sitio y Restricciones de Uso. </p>
+            <h4 id="textoImportante" class=" text-center py-3">
+   	 			CONTENIDO DEL SITIO
+   	 		</h4>
+            <h5 id="textoImportante"> Acceso al Sitio y Restricciones de Uso. </h5>
             <p>Cualquier persona puede tener acceso, realizar consultas o visitar el sitio, sin embargo, solo las personas registradas por medio de la creación de una cuenta pueden realizar pedidos; los usuarios que no deseen registrarse o crear una cuenta podrán realizar su pedido y / o compra por teléfono con alguno de nuestros ejecutivos.
             </p>
             <p>
             	En Celkap.com vendemos productos que pueden ser utilizados por menores de 18 años y que en caso de adquirir un producto deben tener el consentimiento y respaldo de sus padres o tutores.
             </p>
-            <p class=" text-center" id="Importante">Mi Cuenta. </p>
+            <h5 class=" text-center" id="textoImportante">Mi Cuenta. </h5>
+
             <p>Después de crear una cuenta e iniciar sesión usted puede administrar su información personal, cotizar, realizar pedidos, cancelar órdenes, modificar y agregar direcciones de envío y facturación. Usted asume y es responsable de toda la actividad y confidencialidad realizada en su cuenta y sus contraseñas. Nuestro personal no tiene acceso a claves de sus clientes.
             </p>
-            <p class=" text-center" id="Importante">Comentarios y Opiniones. </p>
+            <h5 class=" text-center" id="textoImportante">Comentarios y Opiniones. </h5>
             <p>Cualquier comentario u Opinión publicada por usted podrá ser compartido o mostrado en cualquiera de nuestros medios de comunicación sin restricción alguna.
             </p>
-            <p class=" text-center" id="Importante">Contenidos del sitio. </p>
+            <h5 class=" text-center" id="textoImportante">Contenidos del sitio. </h5>
             <p>Tratamos de brindar la información más completa, confiable y precisa sobre los productos que ofrecemos sin embargo Celkap.com no puede garantizar que esté libre de errores tanto en descripciones de productos, errores tipográficos o fotográficos, imágenes, colores, productos relacionados, disponibilidad de productos o precios, por lo que toda la información acerca de los productos proporcionados solo con fines informativos, usted deberá revisar y verificar las especificaciones técnicas, imágenes y colores de los productos en los sitios oficiales de los Fabricantes antes de realizar su pedido, recomendamos que en caso de duda se ponga en contacto con nuestra área de servicio a clientes, en todo momento lo que buscamos es aclarar ANTES de realizar la operación final.
             </p>
    	 	</div> 
@@ -130,38 +135,40 @@
   </main>
   <!-- Termina el main -->
   <!-- Inicia el footer -->
-  <footer>
-    <div class="container-fluid">
+  <footer >
+    <div class="container-fluid pb-2">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
-       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
-       	    	   <a href="../index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
+       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-1 px-4"> 
+       	    	   <a href="index.html" class="logo"> <img src="../img/logo.svg" alt="logo de Celkap"></a>
 		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
 		       	  	<ul>
 						<li>Teléfono atención: 771 475 07 00 </li>
-						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
+						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</li>
 						<li>Email: info@CelKap.mx</li>
 						<li>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México</li>
 					</ul>      			
 		      </div>
             <div class="redesExtras col-md-7">
-       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-1 redes">
-			       	 <h5>Siguenos en nuestras redes</h5>
-			       	 <a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
-					 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
-				     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-4 redes ">
+			       	 <h5 class="col-lg-6 text-center" >Siguenos en nuestras redes</h5>
+			       	 <div class="col-lg-6 d-flex">
+			       	 	<a href="https://facebook.com" target="_blank"><img src="../img/facebook.png" alt="Seguinos en facebook"></a>
+						 <a href="https://twitter.com" target="_blank"><img src="../img/twitter.png" alt="Seguinos en twitter"></a>
+					     <a href="https://instagram.com" target="_blank"><img src="../img/instagram.png" alt="Seguinos en instagram"></a>
+			       	 </div>
 				</div>
 		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
 					<div class="list-group px-2 list-group-flush">
 		           	   <h5>Quienes somos</h5>
-					  <a href="somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
-					  <a href="aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
-					  <a href="terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
+					  <a href="../detalles/somos.html" class="list-group-item list-group-item-action ">Quienes somos</a>
+					  <a href="../detalles/aviso.html" class="list-group-item list-group-item-action">Aviso de privacidad</a>
+					  <a href="../detalles/terminos.html" class="list-group-item list-group-item-action">Terminos y Condiciones</a>
 					</div>
 					<div class="list-group  px-2 list-group-flush">
 		           	   <h5>Centro de ayuda</h5>
-					  <a href="comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
-					  <a href="garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
-					  <a href="preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
+					  <a href="../detalles/comprar.html" class="list-group-item list-group-item-action">Como comprar</a>
+					  <a href="../detalles/garantia.html" class="list-group-item list-group-item-action">Garantias y devoluciones</a>
+					  <a href="../detalles/preguntas.html" class="list-group-item list-group-item-action">Preguntas frecuentes</a>
 					</div>
                 </div>  	               	
             </div>
