--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body >
  <!-- Inicia el header -->
  <header>
-   <div class="text-center encabezadoCajagris"><p>Si tienes algun problema comunicate al 771556434</p></div> 
+   <div class="d-block text-center encabezadoContacto">
+   	 <p> <marquee direction="right">Si tienes algun problema comunicate al 771556434</marquee> </p>
+  </div> 
    <div class="container-fluid p-3">
    	 <div class="row d-flex align-items-center justify-content-center">
    	 	<div class="col-lg-8">
@@ -27,17 +29,17 @@
 			 </form>
    	 	</div>
    	    <div class="col-lg-4 pt-2 regCarro">
-   	  	   <a href="#"> <img src="img/registro.png" alt="Acceder o registrarse">Acceder o registrarse</a>
+   	  	   <a href="usuario/login.html"> <img src="img/registro.png" alt="Acceder o registrarse">Acceder o registrarse</a>
            <a href="#"><img src="img/carrito.png" alt="Mi carrito">Mi carrito</a>
        </div>
       </div>
     </div>
 </header>
 <!-- inicia el nav -->	
-           <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-0 m-0 "id="botonera">
+           <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-0 m-0" id="botonera">
 				  <div class="container-fluid d-flex align-items-center">
 				    <a class="navbar-brand logo  p-0 m-0" href="index.html">
-				      <img class="rounded" src="img/logo.svg" alt="Logo de celkap">
+				      <img class="rounded" src="img/logo2.svg" alt="Logo de celkap">
 				    </a>
 				    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				      <span class="navbar-toggler-icon"></span>
@@ -56,6 +58,9 @@
 				        <li class="nav-item">
 				           <a class="nav-link active p-3" aria-current="page" href="contacto.html">Contacto</a>
 				        </li>
+				        <li class="nav-item">
+				           <a class="nav-link active p-3" aria-current="page" href="404.html">404</a>
+				        </li>
 				      </ul>
 				    </div>
 				  </div>
@@ -65,8 +70,8 @@
     <main class="pb-0 pt-5 m-0">
     	<div class="container-fluid d-flex align-items-center justify-content-space-evenly flex-wrap">
     		<div class="col-lg-8">
-    			<!-- slider --->
-    			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    			<!-- slider -->
+    			<div id="carouselExampleIndicators" class="carousel slide pb-2" data-bs-ride="carousel">
 				  <div class="carousel-indicators">
 				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -74,13 +79,19 @@
 				  </div>
 				  <div class="carousel-inner rounded">
 				    <div class="carousel-item active">
-				      <img src="img/publicidad1.png" class="d-block w-100" alt="Imagen de publicidad del mes">
+				      <a aria-current="page" href="gadgets.html">
+				      	 <img src="img/publicidad1.png" class="d-block w-100" alt="Imagen de publicidad del mes">
+				      </a>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="img/publicidad2.png" class="d-block w-100" alt="Imagen de publicidad del mes">
+				      <a aria-current="page" href="gadgets.html">
+				        <img src="img/publicidad2.png" class="d-block w-100" alt="Imagen de publicidad del mes">
+				      </a>
 				    </div>
 				    <div class="carousel-item">
-				      <img src="img/publicidad3.png" class="d-block w-100" alt="Imagen de publicidad del mes">
+				     <a aria-current="page" href="laptops.html">
+				       <img src="img/publicidad3.png" class="d-block w-100" alt="Imagen de publicidad del mes">
+				     </a>
 				    </div>
 				  </div>
 				  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -95,16 +106,20 @@
 		<!-- ends slider -->   			
     	 </div>
     		<div class="col-lg-4 px-3 py-2 d-flex align-items-center justify-content-space-evenly flex-column">
-    			<img src="img/publicidad4.png" class="d-block w-100 py-3" alt="Imagen de publicidad del mes">
-    			<img src="img/publicidad5.png" class="d-block w-100 py-3" alt="Imagen de publicidad del mes">
+    			<a aria-current="page" href="gadgets.html">
+    			   <img src="img/publicidad4.png" class="d-block w-100 py-3" alt="Imagen de publicidad del mes">
+    			</a>
+    			<a aria-current="page" href="celulares.html">
+    			  <img src="img/publicidad5.png" class="d-block w-100 py-3" alt="Imagen de publicidad del mes">
+    			</a>
     	</div>    		
     	</div>	
     	<!-- Inician los productos -->	
-			<div id="productos" class="container-fluid m-0 px-0 py-5">
+			<div id="productos" class="container-fluid m-0 px-0 pt-5 pb-1">
 
 		      <img src="img/masVendidos.png" class="d-block w-100" alt="Banner para la seccion de los mas vendidos">
 
-			    <section class="masVendidos">			
+			    <section class="masVendidos pt-3">			
 					<figure>
 						<img src="img/audifonos2.jpg" alt="Xiaomi Audífonos">
 						<figcaption>Xiaomi Audífonos twe</figcaption>
@@ -139,24 +154,26 @@
 <!-- Termina el main -->
 <!-- Inicia el footer -->
   <footer >
-    <div class="container-fluid">
+    <div class="container-fluid pb-2">
         <div class="row d-flex align-items-center justify-content-space-evenly ">
-       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-2"> 
+       	    <div class="col-md-5 d-flex flex-wrap align-items-center justify-content-center py-1 px-4"> 
        	    	   <a href="index.html" class="logo"> <img src="img/logo.svg" alt="logo de Celkap"></a>
 		       	   <p class="text-center pt-2">Más productos,secciones exclusivas,las mejores marcas, estratégicamente ubicados en el centro del país, desplazamos con gran velocidad los productos hasta la comodidad de tu hogar.</p>
 		       	  	<ul>
 						<li>Teléfono atención: 771 475 07 00 </li>
-						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</h6></li>
+						<li>Horario: de Lunes a Viernes de 9:00 a  6pm Sábados de 10:00 a 2:00 pm</li>
 						<li>Email: info@CelKap.mx</li>
 						<li>Dirección: trueno Col. San Cayetano, Pachuca, Hgo. México</li>
 					</ul>      			
 		      </div>
             <div class="redesExtras col-md-7">
-       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-1 redes">
-			       	 <h5>Siguenos en nuestras redes</h5>
-			       	 <a href="https://facebook.com" target="_blank"><img src="img/facebook.png" alt="Seguinos en facebook"></a>
-					 <a href="https://twitter.com" target="_blank"><img src="img/twitter.png" alt="Seguinos en twitter"></a>
-				     <a href="https://instagram.com" target="_blank"><img src="img/instagram.png" alt="Seguinos en instagram"></a>
+       	        <div class="d-flex flex-wrap align-items-center justify-content-space-around px-1 py-4 redes ">
+			       	 <h5 class="col-lg-6 text-center" >Siguenos en nuestras redes</h5>
+			       	 <div class="col-lg-6 d-flex">
+			       	 	<a href="https://facebook.com" target="_blank"><img src="img/facebook.png" alt="Seguinos en facebook"></a>
+						 <a href="https://twitter.com" target="_blank"><img src="img/twitter.png" alt="Seguinos en twitter"></a>
+					     <a href="https://instagram.com" target="_blank"><img src="img/instagram.png" alt="Seguinos en instagram"></a>
+			       	 </div>
 				</div>
 		        <div class="d-flex align-items-center justify-content-space-evenly px-1 py-1">
 					<div class="list-group px-2 list-group-flush">
